2005-01-15  Nate Nielsen <nielsen@memberwebs.com>

	* modules/smb-method.c (add_cached_server), (initial_authentication)
	(prompt_authentication):
	Fix problems with user/domain contained in smb uri. (see #132933)	
	
	Patch from Narayana Pattipati  <narayana.pattipati@wipro.com>

2005-01-12  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Check for posix_fadvice
	
	* libgnomevfs/gnome-vfs-handle-private.h:
	* libgnomevfs/gnome-vfs-handle.c: (_gnome_vfs_handle_forget_cache):
	* libgnomevfs/gnome-vfs-method.h:
	* libgnomevfs/gnome-vfs-ops.c: (gnome_vfs_forget_cache):
	* libgnomevfs/gnome-vfs-private-utils.h:
	Add _gnome_vfs_handle_forget_cache
	
	* libgnomevfs/gnome-vfs-xfer.c: (copy_file_data),
	(xfer_open_source):
	Upe _gnome_vfs_handle_forget when copying large files
	
	* modules/file-method.c: (do_open), (do_forget_cache):
	Implement forget_cache for local files using posix_fadvise
	Set POSIX_FADV_SEQUENTIAL for non random opened files.

2005-01-12  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-cdrom.c:
	(_gnome_vfs_get_iso9660_volume_name):
	Use the iso volume if the first 16 characters are the same
	as the joiliet one. (Since then the joliet label is just a
	truncated version of it.)
	Patch from leon breedt <bitserf@gmail.com>

2005-01-11  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-volume-ops.c: (mount_unmount_thread),
	(mount_unmount_operation), (gnome_vfs_volume_unmount),
	(gnome_vfs_volume_eject), (gnome_vfs_drive_mount),
	(gnome_vfs_drive_eject):
	allow eject of unmounted volumes.

	Patch from Magnus Damm <magnus.damm@gmail.com>

2005-01-11  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-cdrom.c:
	(_gnome_vfs_get_iso9660_volume_name):
	* libgnomevfs/gnome-vfs-iso9660.h:
	Implement joliet label support.

	Patch from  leon breedt <bitserf@gmail.com>

2005-01-11  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release	

	* configure.in:
	Update glib require to 2.6.0
